--- a/qasr/pom.xml
+++ b/qasr/pom.xml
@@ -1,8 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>DBProxy</groupId>
-	<artifactId>DBProxy</artifactId>
+	<groupId>qasr</groupId>
 	<version>0.0.1-SNAPSHOT</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -284,4 +283,5 @@
 		
 	</dependencies>
 	
+	<artifactId>qasr</artifactId>
 </project>
